--- a/README
+++ b/README
@@ -4,11 +4,11 @@ physics engine, which is under a permissive license.
 
 -->  Build Instructions:
 
-SDL and SDL_gfx need to be installed to build and run this game. This command
+SDL and cairo need to be installed to build and run this game. This command
 will install those libraries for you in an apt-based packaging system, used by
 many distros of GNU/Linux:
 
-    sudo apt-get install libsdl1.2debian libsdl1.2-dev libsdl-gfx1.2-4 libsdl-gfx1.2-dev
+    sudo apt-get install libsdl1.2debian libsdl1.2-dev libcairo2 libcairo2-dev
 
 (Pacakge names may be different in newer/older distros.) Execute make:
 
