--- a/README
+++ b/README
@@ -6,37 +6,7 @@ engine, which is under a permissive license.
     http://sudoman.ninth.su/spacedolphin
 
 
-Pre-build Instructions:
-
-SDL, cairo, git and CMake need to be installed to build and run this game.
-The following command will install these packages for you in an apt-based
-packaging system, used by many distros of GNU/Linux: (Pacakge names may be
-different in newer or older systems.)
-
-    sudo apt-get install build-essential cmake git libsdl1.2-dev libcairo2-dev
-
-Next, you need to grab the source code, if you haven't downloaded it yet. (The
-clone only needs to be done once):
-
-    git clone git://repo.or.cz/spacedolphin.git
-
-    cd spacedolphin
-
-In the future, you can pull the changes to update the source code:
-
-    git pull
-
-
-Build Instructions:
-
-To build the game in the spacedolphin directory, run:
-
-    mkdir build ; cd build
-    cmake ..
-    make
-
-CMake will automatically build and statically link the included Chipmunk
-Physics library, without needing to install it.
+See the INSTALL file for installation instructions.
 
 
 Game Instructions:
@@ -45,10 +15,13 @@ To play the game, run this:
 
     ./spacedolphin
 
-Control your flight with the arrow keys so that you can knock objects around
-the screen.
 
-To toggle fullscreen mode, press the 'f' key. To quit, hit ESC or 'q'.
+Control your flight with the arrow keys to knock objects around the screen.
+
+To toggle fullscreen mode, press the 'f' key.
+
+To quit, hit ESC or 'q'.
+
 
 Go nuts with it! :)
 
