Change license detail into explanation about FS.

--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 SpaceDolphin
 
 This is a simple 2D game released under GPLv3+. It uses the Chipmunk Physics
-engine, which is under a permissive license.
+engine, which is also free software. (meaning these respect your freedom.)
 
     http://sudoman.ninth.su/spacedolphin
 
